<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/poppins_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/resume_maker"
            android:textColor="@color/white"
            android:textSize="26dp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp">

                <RelativeLayout
                    android:id="@+id/rel_personal_information"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_personal_information"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/personal_information" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/poppins_600"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/personal_information"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_academic"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_2">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/academic" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/poppins_600"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/academic"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_experience"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_3">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/experience" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/poppins_600"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/experience"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/nativeLay"
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" />
                <RelativeLayout
                    android:id="@+id/rel_references"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_4">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/references" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/poppins_600"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/references"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_skills"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_5">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/skills" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/poppins_600"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/skills"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_language"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_6">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/language" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/poppins_600"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/language"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_hobbies"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_7">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/hobbies" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/poppins_600"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/hobbies"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_resume_samples"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_8">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/resume_samples" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/poppins_600"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/resume_samples"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80sdp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</layout>